# thesis

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  WORKSPACE  job_description.yaml  small_platform.xml
.github/workflows/: build_tex.yml
cmake/Modules/: FindSimGrid.cmake
examples/simple_run/: platform.xml
src/: CMakeLists.txt
src/aphrodite/: CMakeLists.txt
src/aphrodite/include/: config.h  pipeline.h  simulation_result.h  simulator.h  simulator_pipeline.h
src/aphrodite/src/: config.cpp  pipeline.cpp  simulator.cpp
src/clconf/: CMakeLists.txt
src/clconf/include/: clconf.h
src/clconf/src/: clconf.cpp
src/datagen/: CMakeLists.txt  datagen.cpp  string_formatter.cpp  string_formatter.h
src/morpheus/: CMakeLists.txt  README.md  requirements.txt  setup.py
src/morpheus/docs/: README.md  config.md  design.md  how_to_run.md  what_is_it.md
src/morpheus/examples/: CMakeLists.txt  mapper_add_one.cpp  mapper_calc_hash.cpp  mapper_generator.cpp  mapper_nlogn.cpp
src/morpheus/examples/mapper_add_one/: main.cpp  mapper_add_one  result.yaml  specfile.yaml
src/morpheus/examples/wordcount/: CMakeLists.txt  mapper.cpp  reducer.cpp  result.yaml  specfile.yaml
src/morpheus/morpheus/: __init__.py  analytics.py  core.py  data_analyzer.py  full.py  logger.py  main.py  pipeline.py  utils.py
src/morpheus/proto/: Data_pb2.py
src/morpheus/src/: __main__.py  analytics.py  arguments.py  bintest.py  cli.py  config.py  core.py  data_analyzer.py  logger.py  models.py  string_generator.py
src/protobufs/: CMakeLists.txt
src/protobufs/cpp/: Data.pb.cc  Data.pb.h
src/protobufs/python/: Data_pb2.py
src/protobufs/src/: function.proto  testresult.proto
src/simulator/: BUILD  CMakeLists.txt  function.h  main.cpp  pipeline.h  simple.cpp  simulation_result.h  simulator.cpp  simulator.h  simulator_pipeline.cpp  step_context.h  utils.h
src/simulator/later/: actor.h  function.cpp  function.h  main.cpp  simulator.cpp  simulator.h  simulator_pipeline.h
tex/: BUILD  BUILD.bazel  CMakeLists.txt  Makefile  __latexindent_temp.tex  bibitems.txt  bibliography.bib  diploma.tex  header.sty  header.tex  proposal.tex  proposal_presentation.tex  report.tex  thesis.tex
tex/sections/: introduction.tex  litretature_review.tex  report_titlepage.tex  thesis_titlepage.tex  titlepage.tex
tex/sections/thesis/: 000_annotation.tex  010_introduction.tex  020_about.tex  020_literature_review.tex  030_simulation_methods.tex  040_simulation_technology.tex  050_review.tex  060_results.tex  070_testing.tex  080_conclusion.tex  900_appendix_1.tex  introduction.tex
tex/sections/thesis/literature_review/: 010_about.tex  020_simulation_methods.tex  030_simulation_technology.tex  040_review.tex
